--- a/templates/astp.html
+++ b/templates/astp.html
@@ -1,56 +1,36 @@
-{% extends 'base.html' %} {% block title %}{{ title }} ({{ count }}){% endblock %} {% block content %}
-{% if current_user.id == 1 %}
-<div role="group" class="btn-group">
-	<a href="{% if title == 'Authors' %}{{ url_for('add_author') }}{% elif title == 'Series' %}{{ url_for('add_series') }}{% elif title == 'Tags' %}{{ url_for('add_tag') }}{% else %}{{ url_for('add_publisher') }}{% endif %}" class="button">
-		<i class="fa-solid fa-plus"></i>
-	</a>
+{% extends 'base.html' %} {% block content %}
+<div class="notification is-warning is-light">
+  <span class="icon-text">
+		<span class="icon">
+			<i class="fa-solid fa-circle-info"></i>
+		</span>
+		<span>Book counts may be wrong depending on your access level.</span>
+	</span>
 </div>
-{% endif %}
-<div class="row">
-	<div class="offset-by-three one-half column">
-		<table class="u-full-width">
-			<thead>
-				<tr>
-					<th>Name</th>
-				</tr>
-			</thead>
-		  <tbody>
-		  	<tr>
-		  		<td>
-		  			<i class='fa-solid fa-circle-info'></i>
-		  			Book counts may be wrong depending on your access level.
-	  			</td>
-		  	</tr>
-		    {% for i in astp.items %}
-		    <tr>
-		      <td>
-		        <a href="{% if title == 'Authors' %}{{ url_for('author', id=i.id) }}{% elif title == 'Series' %}{{ url_for('serie', id=i.id) }}{% elif title == 'Tags' %}{{ url_for('tag', id=i.id) }}{% else %}{{ url_for('publisher', id=i.id) }}{% endif %}">
-		        	<i class='fa-solid fa-user'></i>
-		        	{{ i.name }} ({{ i.books|count }} book{% if i.books|count != 1 %}s{% endif %})
-		        	{% if book in i.books <= current_user.level %}yes{% endif %}
-		      	</a>
-		      </td>
-		    </tr>
-		    {% endfor %}
-		  </tbody>
-		</table>
-		<!-- Pagination Links-->
-		<div class="row">
-			<div class="six columns">
-				<strong>Page {{ astp.page }} of {{ astp.pages }}</strong>
-			</div>
-			<div class="six columns" style="text-align:right;">
-				{% if astp.has_prev %}
-			  <a href="{% if title == 'Authors' %}{{ url_for('authors', page=astp.prev_num) }}{% elif title == 'Series' %}{{ url_for('series', page=astp.prev_num) }}{% elif title == 'Tags' %}{{ url_for('tags', page=astp.prev_num) }}{% else %}{{ url_for('publishers', page=astp.prev_num) }}{% endif %}" class="button">
-					<i class="fa-solid fa-angles-left"></i>
-			  </a>
-			  {% endif %}{% if astp.has_next %}
-			  <a href="{% if title == 'Authors' %}{{ url_for('authors', page=astp.next_num) }}{% elif title == 'Series' %}{{ url_for('series', page=astp.next_num) }}{% elif title == 'Tags' %}{{ url_for('tags', page=astp.next_num) }}{% else %}{{ url_for('publishers', page=astp.next_num) }}{% endif %}" class="button">
-			  	<i class="fa-solid fa-angles-right"></i>
-			  </a>
-			  {% endif %}
-			</div>
-		</div>
-	</div>
+<div class="buttons is-centered">
+	{% for i in astp.items %}
+  <a class="button is-warning" href="{% if title == 'Authors' %}{{ url_for('author', id=i.id) }}{% elif title == 'Series' %}{{ url_for('serie', id=i.id) }}{% elif title == 'Tags' %}{{ url_for('tag', id=i.id) }}{% else %}{{ url_for('publisher', id=i.id) }}{% endif %}">
+		{{ i.name }} ({{ i.books|count }} book{% if i.books|count != 1 %}s{% endif %}) {% if book in i.books <= current_user.level %}yes{% endif %}
+	</a>
+	{% endfor %}
+</div>
+
+<!-- Pagination Links-->
+<div class="buttons has-addons is-centered">
+	<button class="button is-warning is-inverted">
+		<strong>Page {{ astp.page }} of {{ astp.pages }}</strong>
+	</button>
+
+	<a class="button is-warning is-inverted" {% if astp.has_prev %}href="{% if title == 'Authors' %}{{ url_for('authors', page=astp.prev_num) }}{% elif title == 'Series' %}{{ url_for('series', page=astp.prev_num) }}{% elif title == 'Tags' %}{{ url_for('tags', page=astp.prev_num) }}{% else %}{{ url_for('publishers', page=astp.prev_num) }}{% endif %}"{% else %}disabled{% endif %}>
+		<span class="icon is-small">
+			<i class="fa-solid fa-angles-left"></i>
+		</span>
+	</a>
+	
+	<a class="button is-warning is-inverted" {% if astp.has_next %}href="{% if title == 'Authors' %}{{ url_for('authors', page=astp.next_num) }}{% elif title == 'Series' %}{{ url_for('series', page=astp.next_num) }}{% elif title == 'Tags' %}{{ url_for('tags', page=astp.next_num) }}{% else %}{{ url_for('publishers', page=astp.next_num) }}{% endif %}"{% else %}disabled{% endif %}>
+		<span class="icon is-small">
+			<i class="fa-solid fa-angles-right"></i>
+		</span>
+	</a>
 </div>
 {% endblock %}
