--- a/templates/404.html
+++ b/templates/404.html
@@ -1,12 +1,15 @@
-{% extends 'base.html' %}{% block title %}Error 404!{% endblock %}{% block content %}
-<div class="row" style="text-align: center;">
-	<div class="one-half column" style="margin-top:5%;">
-		<i class="fa-solid fa-link-slash fa-10x"></i>
-	</div>
-	<div class="one-half column">
-		<p style="margin-top:15%;">
+{% extends 'base.html' %} {% block content %}
+<article class="message is-warning">
+  <div class="message-header">
+    <p>Error 404!</p>
+  </div>
+  <div class="message-body">
+    <span class="icon is-large">
+			<i class="fa-solid fa-link-slash"></i>
+		</span>
+		<span>
 			Oops! Looks like that link is broken, sorry about that.<br />Here, let me guide you <a href="{{ url_for('index') }}">back home.</a>
-		</p>
-	</div>
-</div>
+		</span>
+  </div>
+</article>
 {% endblock %}
