--- a/templates/500.html
+++ b/templates/500.html
@@ -1,12 +1,15 @@
 {% extends 'base.html' %}{% block title %}Error 500!{% endblock %}{% block content %}
-<div class="row" style="text-align: center;">
-	<div class="one-half column" style="margin-top:5%;">
-		<i class="fa-solid fa-bug fa-10x"></i>
-	</div>
-	<div class="one-half column">
-		<p style="margin-top:15%;">
-			How embarassing, we don't have these often! I am extremely sorry, but there appears to be an internal server error. Now, don't fret! The admins have been notified and will fix it soon. Give us a few minutes.
-		</p>
-	</div>
-</div>
+<article class="message is-warning">
+  <div class="message-header">
+    <p>Error 500!</p>
+  </div>
+  <div class="message-body">
+    <span class="icon is-large">
+			<i class="fa-solid fa-bug"></i>
+		</span>
+		<span>
+			Oops! Looks like that link is broken, sorry about that.<br />Here, let me guide you <a href="{{ url_for('index') }}">back home.</a>
+		</span>
+  </div>
+</article>
 {% endblock %}
