--- a/templates/list.html
+++ b/templates/list.html
@@ -1,72 +1,66 @@
-{% extends 'base.html' %} {% block title %}{% if astp %}{{ astp.name }}{% else %}{{ title }}{% endif %}{% if count %} ({{ count }}){% endif %}{% endblock %} {% block content %}
-{% if current_user.id == 1 %}
-<div role="group" class="btn-group">
-	<a href="{% if title == 'Books' %}{{ url_for('add_book') }}{% elif author %}{{ url_for('add_author') }}{% elif series %}{{ url_for('add_series') }}{% elif tag %}{{ url_for('add_tag') }}{% elif publisher %}{{ url_for('add_publisher') }}{% endif %}" class="button">
-		<i class="fa-solid fa-plus"></i>
-	</a>
-	{% if title != 'Books' %}
-	<a href="{% if author %}{{ url_for('update_author', id=astp.id) }}{% elif series %}{{ url_for('update_series', id=astp.id) }}{% elif tag %}{{ url_for('update_tag', id=astp.id) }}{% elif publisher %}{{ url_for('update_publisher', id=astp.id) }}{% endif %}" class="button">
-		<i class="fa-solid fa-pencil"></i>
-	</a>
-	<a href="{% if author %}{{ url_for('delete_author', id=astp.id) }}{% elif series %}{{ url_for('delete_series', id=astp.id) }}{% elif tag %}{{ url_for('delete_tag', id=astp.id) }}{% elif publisher %}{{ url_for('delete_publisher', id=astp.id) }}{% endif %}" class="button">
-		<i class="fa-solid fa-trash"></i>
-	</a>
-	{% endif %}
+{% extends 'base.html' %} {% block content %}
+<div class="columns is-multiline">
+  {% for book in books.items %}
+  <div class="column is-one-quarter">
+    <div class="card">
+      <div class="card-image">
+        <figure class="image is-fullwidth">
+          <img class="lazy" data-src="{% if book.cover %}{{ book.cover }}{% else %}https://via.placeholder.com/300x400?text=Cover{% endif %}" alt="Book cover">
+        </figure>
+      </div>
+      <div class="card-content">
+        <div class="media">
+          <div class="media-content has-text-centered">
+						<p class="title is-4">{{ book.title }}</p>
+            <p class="subtitle is-5">{{ book.author.name }}</p>
+            {% if book.series.name != "<None>" %}<p class="subtitle is-6">{{ book.series.name }} #{{ book.series_index }}</p>{% endif %}
+          </div>
+        </div>
+        <div class="content">
+          {{ book.description | truncate(160) | safe }}
+          <div class="pt-3 has-text-centered has-text-weight-medium">
+            {% for tag in book.tags|sort(attribute='name') %}
+            <a href="{{ url_for('tag', id=tag.id) }}">
+              <span class="tag is-warning">
+                {{ tag.name }}
+              </span>
+            </a>
+            {% endfor %}
+            <br>
+            Added {{ moment(book.date_created).fromNow() }}
+          </div>
+        </div>
+      </div>
+      <footer class="card-footer">
+        <a href="{{ url_for('book', id=book.id) }}" class="card-footer-item">
+          <span class="icon-text">
+            <span class="icon">
+              <i class='fa-solid fa-book'></i>
+            </span>
+            <span>View</span>
+          </span>
+		  	</a>
+      </footer>
+    </div>
+  </div>
+  {% endfor %}
 </div>
-{% endif %}
-<table class="u-full-width list">
-	<thead>
-		<tr>
-			{% if series and astp.name != '<None>' %}<th>#</th>{% endif %}
-			<th>Title</th>
-			<th>Tags</th>
-			{% if min or max %}<th>Words</th>{% endif %}
-		</tr>
-	</thead>
-  <tbody>
-  	{% for book in books.items %}
-		<tr>
-			{% if series and astp.name != '<None>' %}<td style='text-align: center;'>{{ book.series_index }}</td>{% endif %}
-		  <td>
-		    <a href="{{ url_for('book', id=book.id) }}">
-		    	<i class='fa-solid fa-book'></i>
-		    	{{ book.title }} {% if not series and book.series.name != '<None>' %}({{ book.series.name }} #{{ book.series_index }}){% endif %} by {{ book.author.name }}
-		  	</a>
-		  </td>
-		  <td>
-		  	{% for tag in book.tags|sort(attribute='name') %}
-		  	<a href="{{ url_for('tag', id=tag.id) }}">
-		  		<i class="fa-solid fa-tag"></i>
-		  		{{ tag.name }}
-		  	</a>
-		  	{% endfor %}
-		  </td>
-		  {% if min or max %}
-		  <td>
-		  	<i class="fa-solid fa-hashtag"></i>
-		  	{{ book.wordcount }}
-		  </td>
-		  {% endif %}
-		</tr>
-		{% endfor %}
-		
-  </tbody>
-</table>
 <!-- Pagination Links-->
-<div class="row">
-	<div class="six columns">
+<div class="buttons has-addons is-centered">
+	<button class="button is-warning">
 		<strong>Page {{ books.page }} of {{ books.pages }}</strong>
-	</div>
-	<div class="six columns" style="text-align:right;">
-		{% if books.has_prev %}
-	  <a href="{{ url_for('books', page=books.prev_num) }}" class="button">
+	</button>
+
+	<a class="button is-warning" {% if books.has_prev %}href="{{ url_for('books', page=books.prev_num) }}"{% else %}disabled{% endif %}>
+		<span class="icon is-small">
 			<i class="fa-solid fa-angles-left"></i>
-	  </a>
-	  {% endif %}{% if books.has_next %}
-	  <a href="{{ url_for('books', page=books.next_num) }}" class="button">
-	  	<i class="fa-solid fa-angles-right"></i>
-	  </a>
-	  {% endif %}
-	</div>
+		</span>
+	</a>
+
+	<a class="button is-warning" {% if books.has_next %}href="{{ url_for('books', page=books.next_num) }}"{% else %}disabled{% endif %}>
+		<span class="icon is-small">
+			<i class="fa-solid fa-angles-right"></i>
+		</span>
+	</a>
 </div>
 {% endblock %}
