--- a/templates/login.html
+++ b/templates/login.html
@@ -1,21 +1,34 @@
-{% extends 'base.html' %}{% block title %}Login{% endblock %}{% block content %}
-<form method="POST">
-	<div class="row">
-		<div class="offset-by-four four columns">
-			<label for="username">Username</label>
-		  <input type="text" class="u-full-width" name="username" />
-		</div>
+{% extends 'base.html' %}{% block content %}
+<div class="columns">
+	<div class="column is-4 is-offset-4">
+		<form class="box has-background-warning" method="POST">
+
+			<div class="field">
+				<label class="label" for="username">Username</label>
+				<p class="control has-icons-left">
+					<input class="input" type="text" class="label" name="username" />
+					<span class="icon is-small is-left">
+						<i class="fas fa-user"></i>
+					</span>
+				</p>
+			</div>
+			<div class="field">
+				<label class="label" for="password">Password</label>
+				<p class="control has-icons-left">
+					<input class="input" type="password" class="label" name="password" />
+					<span class="icon is-small is-left">
+						<i class="fa-solid fa-lock"></i>
+					</span>
+				</p>
+			</div>
+
+			<div class="field has-text-centered">
+				<div class="control">
+					<input class="button is-warning" type="submit" value="Login">
+				</div>
+			</div>
+
+		</form>
 	</div>
-	<div class="row">
-		<div class="offset-by-four four columns">
-		  <label for="password">Password</label>
-		  <input type="password" class="u-full-width" name="password" />
-	  </div>
-  </div>
-  <div class="row">
-  	<div class="offset-by-five two columns">
-  		<input class="button" type="submit" value="Login">
-  	</div>
-  </div>
-</form>
+</div>
 {% endblock %}
